# TRUtor

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp
OneDrive/Documents/school/COMP3140/TRUtor/messageService/: MessageService.cpp  MessageService.h  main.cpp
authentication/: AuthService.cpp
interface/: IUser.h
model/: Course.cpp  Course.h  Forum.cpp  Forum.h  ForumResponse.cpp  ForumResponse.h  Student.cpp  Student.h  Tutor.cpp  Tutor.h  User.cpp  User.h
service/: AuthService.cpp  AuthService.h  CourseService.cpp  CourseService.h  FeedbackService.cpp  FeedbackService.h  ForumService.cpp  ForumService.h  messageService.cpp  messageService.h
